--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.2"
+  },
+  "scripts": {
+    "test": "node ./test/testJ.js"
   }
 }
