--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,10 @@ on:
 
 jobs:
   test:
-
     runs-on: alpine-latest
-
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16.x, 18.x]
+        node-version: [15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
