--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test:
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [15.x]
