--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag gruppea
     - name: Push Docker image to Hub
-      run: docker push ${{secrets.DOCKER_USER}}/my-image-name:$(date +%s)
+      run: docker push ${{secrets.DOCKER_USER}}/gruppea
