--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
           uses: docker/build-push-action@v3
           with:
             push: true
-            tags: app:latest
+            tags: gruppea
